<resources>
    <string name="menuMapTitle">Map</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_share">Share</string>
    <string name="contentSplash">"Splash Screen"</string>
    <string name="gps_enable">"GPS is disabled, meter readings will be inaccurate"</string>
    <string name="no_gps_message">" Go to GPS setting page to turn it on?"</string>
    <string name="jumpinjumpout"> JumpInJumpOut</string>
    <string name="descJijo">"Share your car with friends and others"</string>
    <string name="runJijo">"Run Jump in Jump out"</string>
    <string name="busDesc">"Real time bus schedules"</string>
    <string name="runBus">"Run Bus app"</string>
    <string name="trainDesc">"Best local train app for Mumbai"</string>
    <string name="runTrain">"Run Train app"</string>
    <string name="descAutoTaxi">"Fares, paths, for cabs and autos"</string>
    <string name="runAutoTaxi">"Run AutoTaxi app"</string>
    <string name="descCitizen">"Take action as a Citizen"</string>
    <string name="runCitizen">"Run Citizen app"</string>
    <string name="descSafetyShield">"Women's SafetyS Shield app"</string>
    <string name="runSafetyShield">"Run Women's SafetyS Shield app"</string>
    <string name="gps_disabled_msg">This is your old Location. Please click here to start your GPS to get nearest Station</string>
    <string-array name="array_name">
        <item>Select</item>
    </string-array>
    <string name="atDBCreate">"D_DBC"</string>
    <string name="atShare">"D_S"</string>
    <string name="atRunBus">"D_RB"</string>
    <string name="atDownloadBus">"D_DB"</string>
    <string name="atRunAutoTaxi">"D_RA"</string>
    <string name="atDownloadAutoTaxi">"D_DA"</string>
    <string name="atRunTrain">"D_RT"</string>
    <string name="atDownloadTrain">"D_DT"</string>
    <string name="atRunSafetyShield">"D_RBS"</string>
    <string name="atDownloadSafetyShield">"D_DBS"</string>
    <string name="atDownloadSmartShehar">"C_LS"</string>
    <string name="pageDashboard">"/DD</string>
    <string name="pageDashboardLong">"SmartShehar_Dashboard"</string>
    <string name="pageDashboardFeedback">"/DF</string>
    <string name="pageDashboardFeedbackLong">"/SmartShehar_Feedback"</string>
    <string name="eula_title">Mumbai Local Trains Terms of Use</string>
    <string name="eula_accept">Accept</string>
    <string name="eula_refuse">Refuse</string>
    <string name="androidAppLink">https://play.google.com/store/apps/details?id=com.smartshehar.dashboard.app \nCheck out this great Android App.\n Look for smartshehar on Android Market (Google Play)\n"</string>
    <string name="contactUs">"Contact Us"</string>
    <string name="feedback">"FeedBack/Questions"</string>
    <string name="feedback_for">"FeedBack for"</string>
    <string name="advertise">"Advertise with Us"</string>
    <string name="advertise_interest">"Interested in Advertising "</string>
    <string name="rate">"Rate Us"</string>
    <string name="rateAndroid">"Rate on Google Play"</string>
    <string name="social">"Social"</string>
    <string name="shareFacebook">"Like our Facebook Page"</string>
    <string name="shareTwitter">"Follow us on Twitter"</string>
    <string name="website">"www.smartshehar.com"</string>
    <string name="home_jijo">"Jump in Jump out rideshare"</string>
    <string name="home_bus">"Bus"</string>
    <string name="home_train">"Train"</string>
    <string name="home_autotaxi">"Auto\nTaxi"</string>
    <string name="home_citizen">"Citizen"</string>
    <string name="home_safetyshield">"Safety Shield"</string>
    <string name="map">ISSUES ON MAP</string>
    <string name="dashboard">DASHBOARD Report</string>
    <string name="home_smartshehar">"SmartShehar\nMumbai"</string>
    <string name="home_preferences">"Settings"</string>
    <string name="home_feedback">"Feedback"</string>
    <string name="track_path">Track Path</string>
    <string name="getinvolved">Get involved - Log your issue</string>
<string name="updates">New SmartShehar App added. Must have for everybody especially women stuck in bad situations\n
Train timetables updated
Auto fares updated
http://www.smartshehar.com\n
http://www.facebook.com/smartshehar\n
email: smartshehar@gmail.com\n
</string>
    <string name="parking_issue">PARKING VIOLATION</string>
    <string name="moving_issue">MOVING VIOLATION</string>
    <string name="open">OPEN SPACES/GREENERY</string>
    <string name="openspaces">Open Spaces</string>
    <string name="greencover">Green Cover</string>
    <string name="illegalparking">Illegal Parking</string>
    <string name="illegalstoppage">Illegal Stoppage</string>
    <string name="trafficruleviolation">Traffic Rule Violation</string>
    <string name="airnoise">Air/Noise Pollution</string>
    <string name="regulartraffic">REGULAR TRAFFIC PROBLEM</string>
    <string name="regulartrafficjams">Regular Traffic Jams</string>
    <string name="changerequest">Change Requested</string>
    <string name="regularproblem">Regular Problems </string>
    <string name="autotaxiRickshaw">AUTO-RICKSHAW/TAXI</string>
    <string name="badbehaviou">Bad Behavior</string>
    <string name="EG">Encroached Garden</string>
    <string name="ASEA">Anti Social Elements/Activity</string>
    <string name="PMPG">Poorly Maintained park/garden</string>
    <string name="GTF">Fallen Tree due to rains</string>
    <string name="TF">Tree Felling</string>
    <string name="DPT">Deliberately Poisoned Trees</string>
    <string name="IDT">Infested/Deseased Trees</string>
    <string name="MGD">Mangroves in danger</string>
    <string name="PNPZ">Parking in No Parking zone</string>
    <string name="DP">Double Parking</string>
    <string name="PFGT">Parking in front of a gate</string>
    <string name="PFP">Parking on footpath</string>
    <string name="OEPV">Odd/Even Parking Violation</string>
    <string name="PBS">Parking at Bus-stop</string>
    <string name="PCO">Parking at corner</string>
    <string name="PRPS">Parking in reserved parking space</string>
    <string name="DRBT">Driver in the car, blocking traffic</string>
    <string name="SNSZ">Stopped at No-Stopping Zone</string>
    <string name="TBTM">Truck blocking traffic movement</string>
    <string name="VLMR">Vehicle left in middle of road</string>
    <string name="RD">Rash Driving</string>
    <string name="SJ">Signal Jumping</string>
    <string name="LC">Lane Cutting</string>
    <string name="IT">Illegal Turn</string>
    <string name="DAOW">Driving against One-way</string>
    <string name="OS">Overspeeding</string>
    <string name="MTSH">Multi-toned or Shrill Horn</string>
    <string name="SE">Smokey Exhaust</string>
    <string name="DG">Dark Glasses</string>
    <string name="DN">Dangerous goods</string>
    <string name="TB">Traffic Bottlenecks</string>
    <string name="PD">Pedestrians on road</string>
    <string name="IPV">Illegally parked vehicles</string>
    <string name="NPR">Need Parking Restrictions</string>
    <string name="NOWR">Need One-Way Restriction</string>
    <string name="HV">Need curbs on heavy vehicles</string>
    <string name="SBRJ">School Bus related jams</string>
    <string name="RP">Refusing to ply</string>
    <string name="RM">Rigged Meter</string>
    <string name="MHD">Meter Half Down</string>
    <string name="RB">Rude Behavior</string>
    <string name="BTR">Breaking Traffic Rules</string>
    <string name="BND">Badge Not Displayed</string>
</resources>