<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:id="@+id/txtOpenS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/open"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/sub_cat_one"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtOpenSpaces"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="2dp"

            android:padding="5dp"
            android:text="@string/openspaces"
            android:textColor="@color/light_maroon"
            android:textSize="22sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/EG"
            style="@style/issue_item_text"
            android:text="@string/EG" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/ab_background_focussed" />

        <TextView
            android:id="@+id/ASEA"
            style="@style/issue_item_text"
            android:text="@string/ASEA" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/ab_background_focussed" />

        <TextView
            android:id="@+id/PMPG"
            style="@style/issue_item_text"
            android:text="@string/PMPG" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/ab_background_focussed" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/sub_cat_two"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtOpenGreenery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="2dp"

            android:padding="5dp"
            android:text="@string/greencover"
            android:textColor="@color/light_maroon"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/GTF"
            style="@style/issue_item_text"
            android:text="@string/GTF" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/ab_background_focussed" />
        <TextView
            android:id="@+id/TF"
            style="@style/issue_item_text"
            android:text="@string/TF" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/ab_background_focussed" />

        <TextView
            android:id="@+id/DPT"
            style="@style/issue_item_text"
            android:text="@string/DPT" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/ab_background_focussed" />

        <TextView
            android:id="@+id/IDT"
            style="@style/issue_item_text"
            android:text="@string/IDT" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/ab_background_focussed" />

        <TextView
            android:id="@+id/MGD"
            style="@style/issue_item_text"
            android:text="@string/MGD" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/ab_background_focussed" />

    </LinearLayout>

</LinearLayout>